[package]
name = "tch-serde"
version = "0.7.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "Serialize/Deserialize tch-rs types with serde"
categories = ["parsing"]
documentation = "https://docs.rs/tch-serde/"
repository = "https://github.com/jerry73204/tch-serde"
homepage = "https://github.com/jerry73204/tch-serde.git"
readme = "README.md"
license = "MIT"

[dependencies]
tch = "0.6.1"
serde = { version = "1.0.130", features = ["derive"] }
half = { version = "1.8.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.45"
serde_json = "1.0.70"

[features]
default = []
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
no-default-features = true
